export const snapshot = {};

snapshot[`transform 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`transform 2`] = `
{
  additionalProperties: false,
  description: "One.",
  properties: {
    value: {
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`transform 3`] = `
{
  additionalProperties: false,
  description: "Two. One.",
  properties: {
    value: {
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
